frontend/tests/cases/negative/polymorphism/patternArity.gr
data Vec a = Nil a | Cons a (Vec a)

extract : Vec Int -> Int
extract (Cons x) = x